# multi-agent-harness

./: .gitignore  .governance.toml  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  package.json  pnpm-lock.yaml
.agents/: product-gap-inbox.md
.claude-plugin/: marketplace.json  plugin.json
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: codex_app_server.rs  company_os_api.rs  kimi_acp.rs  legacy_export.rs  main.rs  mcp.rs  native_session.rs  project.rs  resident.rs  resident_daemon.rs  sse.rs  workflow.rs
crates/harness-cli/tests/: claude_delivery_cwd.rs  codex_delivery_cwd.rs  company_os_api.rs  data.rs  delivery_project_context.rs  global_project_workflow.rs  init_project.rs  kimi_provider.rs  launch_spec_mapping.rs  legacy_export.rs  mcp_stdio.rs  mission_wave_api.rs  project_cli.rs  project_convergence.rs  project_migrate.rs  project_registry.rs  project_resolution.rs  serve_projects_api.rs  serve_sse_projects.rs  store_source.rs  team_run_api.rs  team_run_start.rs  workflow_completion_hook.rs  workflow_cwd.rs  workflow_project_options.rs
crates/harness-cli/tests/data/: claude_stream_sample.ndjson
crates/harness-cli/tests/fake_provider/: mod.rs
crates/harness-cli/tests/harness_env/: mod.rs
docs/: README.md  VISION.md  acceptance.zh.md  agent-control-plane.md  agent-dashboard-design.zh.md  agent-integration-model.md  agent-runtime.md  architecture-map.md  architecture.md  ci-cd.md  codex-agent-runtime.md  concept-model.md  core-modules.md  dashboard.md  data-model.md  decisions.md  design-basis.md  documentation-governance.md  mvp.md  (+18 more)
(+892 files in other folders)
