[workspace]
members = [
  "crates/harness-core",
  "crates/harness-store",
  "crates/harness-cli"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/cyl19970726/multi-agent-harness"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
